# realworld-axum-seaorm

./: .env.example  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: article.rs  article_tag.rs  comment.rs  lib.rs  links.rs  mod.rs  prelude.rs  tag.rs  user.rs
entity/src/entities/: article.rs  article_tag.rs  comment.rs  favorited_article.rs  follower.rs  mod.rs  prelude.rs  tag.rs  user.rs
migration/src/: lib.rs  m20231030_000001_create_user_table.rs  m20231030_000002_create_article_table.rs  m20231030_000003_create_comment_table.rs  m20231030_000004_create_tag_table.rs  m20231030_000005_create_article_tag_table.rs  m20231030_000006_seed_db.rs  m20231101_000006_create_follower_table.rs  m20231104_000007_create_favorited_article_table.rs  m20231112_000008_add_user_password.rs
seed/: Cargo.toml
seed/fixtures/: article_tag.yml  comment.yml  follower.yml  user.yml
seed/src/: lib.rs
src/: main.rs  tests.rs
src/api/: article.rs  comment.rs  error.rs  mod.rs  profile.rs  tags.rs  user.rs
src/app/: auth.rs  db.rs  server.rs
src/middleware/: auth.rs
src/repo/: article.rs  article_tag.rs  comment.rs  favorited_article.rs  follower.rs  mod.rs  tag.rs  user.rs
src/seed/: mod.rs
src/seed/fixtures/: article.yml  favorited_article.yml  follower.yml  tag.yml  user.yml
