[package]
name = "realworld-axum-seaorm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tracing-subscriber = { version = "0.3" }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6" }
dotenvy = { version = "0.15" }

[dev-dependencies]
serial_test = "*"