[package]
name = "realworld-axum-seaorm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
seed = { path = "seed" }
tracing-subscriber = { version = "0.3" }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["headers", "macros", "json"] }
dotenvy = { version = "0.15" }
serde = { version = "1" }
slug = "0.1.5"
chrono = "0.4.31"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "9.1.0"
bytes = "1"
thiserror = "1.0.50"
axum-extra = "0.8.0"
serde_json = "1.0.108"
tower = { version = "0.4.13", features = ["util"] }

[dev-dependencies]
serial_test = "*"
