[package]
name = "realworld-axum-seaorm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.75"
entity = { path = "entity" }
migration = { path = "migration" }
tracing-subscriber = { version = "0.3" }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid" ] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["headers", "macros", "json"] }
dotenvy = { version = "0.15" }
serde = { version = "1" }
slug = "0.1.5"
chrono = "0.4.31"
argon2 = "0.5.2"
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "9.1.0"
bytes = "1"
thiserror = "1.0.50"
axum-extra = "0.8.0"
serde_json = "1.0.108"
tower = { version = "0.4.13", features = ["util"] }
uuid = { version = "1.5.0", features = ["v4"] }
# cder = "0.2.1"
# cder = { path = "../cder" }
# cder = { git = "https://github.com/SergPonomar/cder", branch = "add-uuid-support" }
cder = { git = "https://github.com/estie-inc/cder" }
futures = "0.3"

[dev-dependencies]
serial_test = "*"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print", "with-uuid" ] }
